Reshow OSK when calling focus() on an already focused Element

Calling Element::focus() on an already focused Element does not lead to the OSK
being shown again, even though the OSK might have been dismissed since the time
that Element gained focus. This change fixes that issue.

BUG=751256
TEST=Manually tested on a Nexus 7 (running Android 6.0.1), and a Fire device
(running FireOS 5) with accessibility both on and off.

Change-Id: I82e3a1bb169094bbe2b6c1bf94d4fa42ae1225c4