third_party/WebKit/Source/modules/accessibility/AXNodeObject.cpp
@@ -2532,13 +2532,6 @@ bool AXNodeObject::OnNativeFocusAction() {
     return true;
   }
 
-  // If this node is already the currently focused node, then calling
-  // focus() won't do anything.  That is a problem when focus is removed
-  // from the webpage to chrome, and then returns.  In these cases, we need
-  // to do what keyboard and mouse focus do, which is reset focus first.
-  if (document->FocusedElement() == element)
-    document->ClearFocusedElement();
-
   element->focus();
   return true;
 }
